--- a/examples/backtest/backtest_jupyter_emacross.ipynb
+++ b/examples/backtest/backtest_jupyter_emacross.ipynb
@@ -76,8 +76,8 @@
     "    data_bars_bid=bid_data,\n",
     "    data_bars_ask=ask_data,\n",
     "    strategies=strategies,\n",
-    "    fill_model=fill_model,\n",
-    "    config=config)\n"
+    "    config=config,\n",
+    "    fill_model=fill_model)\n"
    ],
    "metadata": {
     "collapsed": false,
