--- a/examples/backtest/backtest_jupyter_emacross.ipynb
+++ b/examples/backtest/backtest_jupyter_emacross.ipynb
@@ -19,7 +19,7 @@
     "\n",
     "from nautilus_trader.core.message import Event\n",
     "from nautilus_trader.common.functions import fast_mean\n",
-    "from nautilus_trader.model.enums import OrderSide, OrderPurpose, TimeInForce, Currency, SecurityType\n",
+    "from nautilus_trader.model.enums import OrderSide, OrderPurpose, TimeInForce\n",
     "from nautilus_trader.model.objects import Price, Tick, BarSpecification, BarType, Bar, Instrument\n",
     "from nautilus_trader.model.identifiers import Symbol\n",
     "from nautilus_trader.trade.strategy import TradingStrategy\n",
