--- a/examples/backtest/backtest_jupyter_emacross.ipynb
+++ b/examples/backtest/backtest_jupyter_emacross.ipynb
@@ -93,7 +93,7 @@
     "        \"\"\"\n",
     "        # Put custom code to be run on strategy start here (or pass)\n",
     "        self.instrument = self.get_instrument(self.symbol)\n",
-    "        self.precision = self.instrument.tick_precision\n",
+    "        self.precision = self.instrument.price_precision\n",
     "        self.entry_buffer = self.instrument.tick_size.as_double() * 3.0\n",
     "        self.SL_buffer = self.instrument.tick_size * 10.0\n",
     "        self.position_sizer = FixedRiskSizer(self.instrument)\n",
@@ -107,9 +107,18 @@
     "        self.subscribe_ticks(self.symbol)\n",
     "\n",
     "        # Register the indicators for updating\n",
-    "        self.register_indicator(data_source=self.bar_type, indicator=self.fast_ema, update_method=self.fast_ema.update)\n",
-    "        self.register_indicator(data_source=self.bar_type, indicator=self.slow_ema, update_method=self.slow_ema.update)\n",
-    "        self.register_indicator(data_source=self.bar_type, indicator=self.atr, update_method=self.atr.update)\n",
+    "        self.register_indicator(\n",
+    "            data_source=self.bar_type,\n",
+    "            indicator=self.fast_ema,\n",
+    "            update_method=self.fast_ema.update)\n",
+    "        self.register_indicator(\n",
+    "            data_source=self.bar_type,\n",
+    "            indicator=self.slow_ema,\n",
+    "            update_method=self.slow_ema.update)\n",
+    "        self.register_indicator(\n",
+    "            data_source=self.bar_type,\n",
+    "            indicator=self.atr,\n",
+    "            update_method=self.atr.update)\n",
     "\n",
     "    def on_tick(self, tick: Tick):\n",
     "        \"\"\"\n",
@@ -119,7 +128,7 @@
     "\n",
     "        :param tick: The received tick.\n",
     "        \"\"\"\n",
-    "        # self.log.info(f\"Received Tick({tick})\")  # For demonstration purposes\n",
+    "        # self.log.info(f\"Received Tick({tick})\")  # For debugging\n",
     "        self.spreads.append(tick.ask.as_double() - tick.bid.as_double())\n",
     "\n",
     "    def on_bar(self, bar_type: BarType, bar: Bar):\n",
@@ -131,7 +140,7 @@
     "        :param bar_type: The received bar type.\n",
     "        :param bar: The received bar.\n",
     "        \"\"\"\n",
-    "        # self.log.info(f\"Received {bar_type} Bar({bar})\")  # For demonstration purposes\n",
+    "        self.log.info(f\"Received {bar_type} Bar({bar})\")  # For debugging\n",
     "\n",
     "        # Check if indicators ready\n",
     "        if not self.indicators_initialized():\n",
@@ -153,96 +162,104 @@
     "                self.log.debug(f\"Liquidity Ratio == {liquidity_ratio} (no liquidity).\")\n",
     "                return\n",
     "\n",
-    "        if self.count_orders_working() == 0 and self.is_flat():  # No active or pending positions\n",
-    "            atomic_order = None\n",
+    "        spread_buffer = max(average_spread, self.spreads[-1])\n",
+    "        sl_buffer = self.atr.value * self.SL_atr_multiple\n",
     "\n",
+    "        if self.count_orders_working() == 0 and self.is_flat():  # No active or pending positions\n",
     "            # BUY LOGIC\n",
     "            if self.fast_ema.value >= self.slow_ema.value:\n",
-    "                price_entry = Price(bar.high + self.entry_buffer + max(average_spread, self.spreads[-1]), self.precision)\n",
-    "                price_stop_loss = Price(bar.low - (self.atr.value * self.SL_atr_multiple), self.precision)\n",
-    "                price_take_profit = Price(price_entry + (price_entry.as_double() - price_stop_loss.as_double()), self.precision)\n",
-    "\n",
-    "                if self.instrument.security_type == SecurityType.FOREX:\n",
-    "                    quote_currency = Currency[self.instrument.symbol.code[3:]]\n",
-    "                    exchange_rate = self.xrate_for_account(quote_currency)\n",
-    "                else:\n",
-    "                    exchange_rate = self.xrate_for_account(self.instrument.base_currency)\n",
-    "\n",
-    "                position_size = self.position_sizer.calculate(\n",
-    "                    equity=self.account().free_equity,\n",
-    "                    risk_bp=self.risk_bp,\n",
-    "                    price_entry=price_entry,\n",
-    "                    price_stop_loss=price_stop_loss,\n",
-    "                    exchange_rate=exchange_rate,\n",
-    "                    commission_rate_bp=0.15,\n",
-    "                    hard_limit=20000000,\n",
-    "                    units=1,\n",
-    "                    unit_batch_size=10000)\n",
-    "                if position_size.value > 0:\n",
-    "                    atomic_order = self.order_factory.atomic_stop_market(\n",
-    "                        symbol=self.symbol,\n",
-    "                        order_side=OrderSide.BUY,\n",
-    "                        quantity=position_size,\n",
-    "                        price_entry=price_entry,\n",
-    "                        price_stop_loss=price_stop_loss,\n",
-    "                        price_take_profit=price_take_profit,\n",
-    "                        time_in_force=TimeInForce.GTD,\n",
-    "                        expire_time=bar.timestamp + timedelta(minutes=1))\n",
-    "                else:\n",
-    "                    self.log.info(\"Insufficient equity for BUY signal.\")\n",
-    "\n",
+    "                self._enter_long(bar, sl_buffer, spread_buffer)\n",
     "            # SELL LOGIC\n",
     "            elif self.fast_ema.value < self.slow_ema.value:\n",
-    "                price_entry = Price(bar.low - self.entry_buffer, self.precision)\n",
-    "                price_stop_loss = Price(bar.high + (self.atr.value * self.SL_atr_multiple) + max(average_spread, self.spreads[-1]), self.precision)\n",
-    "                price_take_profit = Price(price_entry - (price_stop_loss.as_double() - price_entry.as_double()), self.precision)\n",
+    "                self._enter_short(bar, sl_buffer, spread_buffer)\n",
     "\n",
-    "                if self.instrument.security_type == SecurityType.FOREX:\n",
-    "                    quote_currency = Currency[self.instrument.symbol.code[3:]]\n",
-    "                    exchange_rate = self.xrate_for_account(quote_currency)\n",
-    "                else:\n",
-    "                    exchange_rate = self.xrate_for_account(self.instrument.base_currency)\n",
+    "        self._check_trailing_stops(bar, sl_buffer, spread_buffer)\n",
     "\n",
-    "                position_size = self.position_sizer.calculate(\n",
-    "                    equity=self.account().free_equity,\n",
-    "                    risk_bp=self.risk_bp,\n",
-    "                    price_entry=price_entry,\n",
-    "                    price_stop_loss=price_stop_loss,\n",
-    "                    exchange_rate=exchange_rate,\n",
-    "                    commission_rate_bp=0.15,\n",
-    "                    hard_limit=20000000,\n",
-    "                    units=1,\n",
-    "                    unit_batch_size=10000)\n",
+    "    def _enter_long(self, bar: Bar, sl_buffer: float, spread_buffer: float):\n",
+    "        price_entry = Price(bar.high + self.entry_buffer + spread_buffer, self.precision)\n",
+    "        price_stop_loss = Price(bar.low - sl_buffer, self.precision)\n",
     "\n",
-    "                if position_size.value > 0:  # Sufficient equity for a position\n",
-    "                    atomic_order = self.order_factory.atomic_stop_market(\n",
-    "                        symbol=self.symbol,\n",
-    "                        order_side=OrderSide.SELL,\n",
-    "                        quantity=position_size,\n",
-    "                        price_entry=price_entry,\n",
-    "                        price_stop_loss=price_stop_loss,\n",
-    "                        price_take_profit=price_take_profit,\n",
-    "                        time_in_force=TimeInForce.GTD,\n",
-    "                        expire_time=bar.timestamp + timedelta(minutes=1))\n",
-    "                else:\n",
-    "                    self.log.info(\"Insufficient equity for SELL signal.\")\n",
+    "        risk = price_entry.as_double() - price_stop_loss.as_double()\n",
+    "        price_take_profit = Price(price_entry + risk, self.precision)\n",
     "\n",
-    "            # ENTRY ORDER SUBMISSION\n",
-    "            if atomic_order:\n",
-    "                self.submit_atomic_order(atomic_order, self.position_id_generator.generate())\n",
+    "        exchange_rate = self.get_exchange_rate_for_account(\n",
+    "            quote_currency=self.instrument.quote_currency,\n",
+    "            price_type=PriceType.ASK)\n",
     "\n",
+    "        position_size = self.position_sizer.calculate(\n",
+    "            equity=self.account().free_equity,\n",
+    "            risk_bp=self.risk_bp,\n",
+    "            entry=price_entry,\n",
+    "            stop_loss=price_stop_loss,\n",
+    "            exchange_rate=exchange_rate,\n",
+    "            commission_rate_bp=0.15,\n",
+    "            hard_limit=20000000,\n",
+    "            units=1,\n",
+    "            unit_batch_size=10000)\n",
+    "        if position_size > 0:\n",
+    "            atomic_order = self.order_factory.atomic_stop_market(\n",
+    "                symbol=self.symbol,\n",
+    "                order_side=OrderSide.BUY,\n",
+    "                quantity=position_size,\n",
+    "                price_entry=price_entry,\n",
+    "                price_stop_loss=price_stop_loss,\n",
+    "                price_take_profit=price_take_profit,\n",
+    "                time_in_force=TimeInForce.GTD,\n",
+    "                expire_time=bar.timestamp + timedelta(minutes=1))\n",
+    "\n",
+    "            self.submit_atomic_order(atomic_order, self.position_id_generator.generate())\n",
+    "        else:\n",
+    "            self.log.info(\"Insufficient equity for BUY signal.\")\n",
+    "\n",
+    "    def _enter_short(self, bar: Bar, sl_buffer: float, spread_buffer: float):\n",
+    "        price_entry = Price(bar.low - self.entry_buffer, self.precision)\n",
+    "        price_stop_loss = Price(bar.high + sl_buffer + spread_buffer, self.precision)\n",
+    "\n",
+    "        risk = price_stop_loss.as_double() - price_entry.as_double()\n",
+    "        price_take_profit = Price(price_entry - risk, self.precision)\n",
+    "\n",
+    "        exchange_rate = self.get_exchange_rate_for_account(\n",
+    "            quote_currency=self.instrument.quote_currency,\n",
+    "            price_type=PriceType.ASK)\n",
+    "\n",
+    "        position_size = self.position_sizer.calculate(\n",
+    "            equity=self.account().free_equity,\n",
+    "            risk_bp=self.risk_bp,\n",
+    "            entry=price_entry,\n",
+    "            stop_loss=price_stop_loss,\n",
+    "            exchange_rate=exchange_rate,\n",
+    "            commission_rate_bp=0.15,\n",
+    "            hard_limit=20000000,\n",
+    "            units=1,\n",
+    "            unit_batch_size=10000)\n",
+    "\n",
+    "        if position_size > 0:  # Sufficient equity for a position\n",
+    "            atomic_order = self.order_factory.atomic_stop_market(\n",
+    "                symbol=self.symbol,\n",
+    "                order_side=OrderSide.SELL,\n",
+    "                quantity=position_size,\n",
+    "                price_entry=price_entry,\n",
+    "                price_stop_loss=price_stop_loss,\n",
+    "                price_take_profit=price_take_profit,\n",
+    "                time_in_force=TimeInForce.GTD,\n",
+    "                expire_time=bar.timestamp + timedelta(minutes=1))\n",
+    "\n",
+    "            self.submit_atomic_order(atomic_order, self.position_id_generator.generate())\n",
+    "        else:\n",
+    "            self.log.info(\"Insufficient equity for SELL signal.\")\n",
+    "\n",
+    "    def _check_trailing_stops(self, bar: Bar, sl_buffer: float, spread_buffer: float):\n",
     "        for working_order in self.orders_working().values():\n",
-    "            # TRAILING STOP LOGIC\n",
     "            if working_order.purpose == OrderPurpose.STOP_LOSS:\n",
     "                # SELL SIDE ORDERS\n",
     "                if working_order.is_sell:\n",
-    "                    temp_price = Price(bar.low - (self.atr.value * self.SL_atr_multiple), self.precision)\n",
-    "                    if temp_price > working_order.price:\n",
+    "                    temp_price = Price(bar.low - sl_buffer, self.precision)\n",
+    "                    if temp_price.gt(working_order.price):\n",
     "                        self.modify_order(working_order, working_order.quantity, temp_price)\n",
     "                # BUY SIDE ORDERS\n",
     "                elif working_order.is_buy:\n",
-    "                    temp_price = Price(bar.high + (self.atr.value * self.SL_atr_multiple) + max(average_spread, self.spreads[-1]), self.precision)\n",
-    "                    if temp_price < working_order.price:\n",
+    "                    temp_price = Price(bar.high + sl_buffer + spread_buffer, self.precision)\n",
+    "                    if temp_price.lt(working_order.price):\n",
     "                        self.modify_order(working_order, working_order.quantity, temp_price)\n",
     "\n",
     "    def on_instrument(self, instrument: Instrument):\n",
@@ -251,7 +268,7 @@
     "\n",
     "        :param instrument: The received instrument.\n",
     "        \"\"\"\n",
-    "        if self.instrument.symbol.equals(instrument.symbol):\n",
+    "        if self.instrument.symbol.equal(instrument.symbol):\n",
     "            self.instrument = instrument\n",
     "\n",
     "        self.log.info(f\"Updated instrument {instrument}.\")\n",
@@ -300,7 +317,7 @@
     "        # Put custom code to be run on a strategy disposal here (or pass)\n",
     "        self.unsubscribe_instrument(self.symbol)\n",
     "        self.unsubscribe_bars(self.bar_type)\n",
-    "        self.unsubscribe_ticks(self.symbol)"
+    "        self.unsubscribe_ticks(self.symbol)\n"
    ]
   },
   {
@@ -426,7 +443,7 @@
     "from nautilus_trader.backtest.models import FillModel\n",
     "from nautilus_trader.backtest.engine import BacktestEngine\n",
     "\n",
-    "from nautilus_trader.__info__ import __version__ as n_trader_version\n",
+    "from nautilus_trader import __version__ as n_trader_version\n",
     "print(f'nautilus_trader {n_trader_version}')"
    ]
   },
@@ -442,7 +459,7 @@
    "outputs": [],
    "source": [
     "loader = InstrumentLoader()\n",
-    "AUDUSD = loader.default_fx_ccy(Symbol('AUDUSD', Venue('FXCM')), tick_precision=5)  # Test Instrument\n",
+    "AUDUSD = loader.default_fx_ccy(Symbol('AUDUSD', Venue('FXCM')))  # Test Instrument\n",
     "\n",
     "data = BacktestDataContainer()\n",
     "data.add_instrument(AUDUSD)\n",
@@ -583,10 +600,10 @@
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
-    "source": [],
     "metadata": {
      "collapsed": false
-    }
+    },
+    "source": []
    }
   }
  },
